--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,5 +34,5 @@
     <input type="radio" name="devoured" value="0"> not devoured...
   </div>
 
-  <button type="submit">Add Cat</button>
+  <button type="submit">Add Burger</button>
 </form>
